Texture paint - sample color picker is highly unreliable when "clip end" distances are large enough #72372

Closed
opened 2019-12-12 03:46:47 +01:00 by Vas · 6 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-10 23:56, hash: 63d521432e
Worked: (optional)

Short description of error
I'm not sure if this is a bug or a system limitation, but after couple of hours prodding I can conclude this:

  • If clip end is 100m-1000m and camera lens is <100mm , Texture paint sample color is accuare and reliable
  • If clip end is 1000m-6000m and camera lens is 35-200mm, when you zoom in and start sampling color, there's a small chance of wrong color picking (sampling merged colors instead of original texture source)
  • if clip end is >10000m and there's any kind of zoom in, the color picking becomes 50/50 chance to actually sample the texture source, basically impossible to pick the right color

This can be a pretty big issue for someone who works on big scenes and paints textures (like roughness maps/normal maps) in blender, You naturally tend to zoom in a lot to have a better stroke/precision, but zooming in viewport causes a huge decreasce in sampling accuracy. I found out the cause and managed to metigate it by decreascing Clip End distance of some cameras. And in the example below, 1000m is not even that much for a clip end distance.

Here's a clip demonstrating what I mean:
2019-12-12 02-01-48.mp4

In the source file I demonstrated the minumum clip end + viewport zoom necessary to casue this instability, the main culprid of this is the Clip End + Viewport zoom in values. If Clip End is anything like 10000m then it becomes practically unusable to sample colors

Also this effect is a lot more proiminent on the edges of the mesh

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  • Open the blend file
  • Enable the Render view
  • make sure the cyan texture is selected in shader editor (bad big.png)
  • Enter the camera view
  • go to 3D view and enter the Texture Paint mode
  • Press S to sample the colors (less reliable on edges of mesh
  • Zoom in and notice that sampling becomes even less accurate

sample color bug 2.blend

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-10 23:56, hash: `63d521432e` Worked: (optional) **Short description of error** I'm not sure if this is a bug or a system limitation, but after couple of hours prodding I can conclude this: - If clip end is 100m-1000m and camera lens is <100mm , Texture paint sample color is accuare and reliable - If clip end is 1000m-6000m and camera lens is 35-200mm, when you zoom in and start sampling color, there's a small chance of wrong color picking (sampling merged colors instead of original texture source) - if clip end is >10000m and there's any kind of zoom in, the color picking becomes 50/50 chance to actually sample the texture source, basically impossible to pick the right color This can be a pretty big issue for someone who works on big scenes and paints textures (like roughness maps/normal maps) in blender, You naturally tend to zoom in a lot to have a better stroke/precision, but zooming in viewport causes a huge decreasce in sampling accuracy. I found out the cause and managed to metigate it by decreascing Clip End distance of some cameras. And in the example below, 1000m is not even that much for a clip end distance. Here's a clip demonstrating what I mean: [2019-12-12 02-01-48.mp4](https://archive.blender.org/developer/F8210974/2019-12-12_02-01-48.mp4) In the source file I demonstrated the minumum clip end + viewport zoom necessary to casue this instability, the main culprid of this is the Clip End + Viewport zoom in values. If Clip End is anything like 10000m then it becomes practically unusable to sample colors Also this effect is a lot more proiminent on the edges of the mesh **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] - Open the blend file - Enable the Render view - make sure the cyan texture is selected in shader editor (bad big.png) - Enter the camera view - go to 3D view and enter the Texture Paint mode - Press S to sample the colors (less reliable on edges of mesh - Zoom in and notice that sampling becomes even less accurate [sample color bug 2.blend](https://archive.blender.org/developer/F8211013/sample_color_bug_2.blend)
Author

Added subscriber: @Alumx

Added subscriber: @Alumx

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Dev note:
I suspect this is a raycast inaccuracy due to the distance from ray_start.
If so, a solution would be to move ray_start to the point where it hits bound_box.

Dev note: I suspect this is a raycast inaccuracy due to the distance from ray_start. If so, a solution would be to move ray_start to the point where it hits bound_box.
Germano Cavalcante self-assigned this 2019-12-17 19:06:48 +01:00

After investigating, I realized that it has nothing to do with raycast, but with select_engine.

After investigating, I realized that it has nothing to do with raycast, but with select_engine.

This issue was referenced by 61f4a7d1f5

This issue was referenced by 61f4a7d1f593e3870e7a0df4b32e95516b236eef

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72372
No description provided.