Fix T72372: color picker is unreliable with large "clip end" values

By my tests, `planes_from_projmat` proved to be more accurate than the current solution.

Differential Revision: https://developer.blender.org/D6434